vlib/v/checker/tests/assign_generic_fn_err.vv
fn main() {
	fun := fn [T](value T) T {
		return value
	}

	println(fun[int](100))
}
